--- a/src/components/sidebar/Links/links.css
+++ b/src/components/sidebar/Links/links.css
@@ -1,24 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap');
 
-.sidebar-items{
-    font-size: 1.4rem;
-    font-weight: 500;
-    font-family: 'Tajawal', sans-serif;
-    color: #4f4f4f
+.sidebar-items {
+  font-size: 1.4rem;
+  font-weight: 500;
+  font-family: 'Tajawal', sans-serif;
+  color: #4f4f4f;
 }
 
-
-.sidebar-link-box{
-    width: 100%;
-    padding: 0.75rem 0rem 0.75rem 0.25rem;
-
+.sidebar-link-box {
+  width: 100%;
+  padding: 0.75rem 0 0.75rem 0.25rem;
 }
 
-.sidebar-link-box:hover, .sidebar-link-box:hover *{
-    background-color: #98C10F;
-    color: white !important;
+.sidebar-link-box:hover,
+.sidebar-link-box:hover * {
+  background-color: #98c10f;
+  color: white !important;
 }
 
 .link-name {
-    color: #4f4f4f
+  color: #4f4f4f;
 }
