--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -31,7 +31,7 @@
   border-top-right-radius: 40px;
   color: white;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   border: none;
   padding: 8px 0;
 }
