--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -5,12 +5,12 @@
   position: relative;
   left: -240px;
   transition: 200ms ease-in-out;
+  display: none !important;
 }
 
 .sidebar-active {
-  height: 100vh;
-  position: relative;
   left: 0;
+  display: flex !important;
 }
 
 .sidebar-title {
@@ -33,5 +33,5 @@
   display: flex;
   justify-content: flex-end;
   border: none;
-  padding: 8px 0;
+  padding: 0px;
 }
