--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  background-color: rgb(162, 211, 26);
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -62,7 +63,8 @@ button {
   margin-right: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #1e90ff;
+  background-color: rgb(162, 211, 26);
+  border: 1px solid;
   color: #fff;
   cursor: pointer;
 }
@@ -126,10 +128,10 @@ button:hover {
   margin-top: 10px;
 }
 
-/* @media (min-width: 768px) {
+@media (max-width: 768px) {
   .header {
-    flex-direction: row;
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
     padding: 20px 40px;
   }
 
@@ -139,6 +141,10 @@ button:hover {
 
   .buttons {
     margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-} */
+}
 
