Update modal styles

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -43,3 +43,13 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #3e8e41;
 }
+
+@media (max-width: 768px) {
+  form {
+    width: 90%;
+  }
+  
+  .modal {
+    width: 50%;
+  }
+}
