Mobile view for index view

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -3,13 +3,10 @@
 .sidebar-container {
   height: 100vh;
   position: relative;
-  left: -240px;
-  transition: 200ms ease-in-out;
   display: none !important;
 }
 
 .sidebar-active {
-  left: 0;
   display: flex !important;
 }
 
@@ -33,5 +30,16 @@
   display: flex;
   justify-content: flex-end;
   border: none;
-  padding: 0px;
+  padding-right: 1rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .sidebar-container {
+    position: relative;
+    display: flex !important;
+  }
+  
+  .sidebar-active {
+    display: none !important;
+  }
 }
