--- a/src/pages/cars/CarCard/car-card.css
+++ b/src/pages/cars/CarCard/car-card.css
@@ -8,3 +8,14 @@
     height: auto;
     width: 15rem
 }
+
+@media only screen and (max-width: 768px) {
+    .car-card {
+      height: auto;
+    }
+
+    .car-image {
+        height: auto;
+        width: 10rem
+    }
+  }
