--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  background-color: rgb(162, 211, 26);
+  /* background-color: rgb(162, 211, 26); */
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -20,10 +20,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
 }
 
 .nav {
@@ -63,7 +63,7 @@ button {
   margin-right: 10px;
   border: none;
   border-radius: 4px;
-  background-color: rgb(162, 211, 26);
+  background-color: #a2d31a;
   border: 1px solid;
   color: #fff;
   cursor: pointer;
