--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100vh;
   font-family: sans-serif;
+  background-color: #a2d31a;
   /* background-color: #f0f0f0; */
   /* background-image: url(http://www.desertsafaridubai.com/img/morning-desert-safari-hm.jpg); */
   background-repeat: no-repeat;
