--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -1,14 +1,11 @@
 .container {
   display: flex;
-  /* background-color: rgb(162, 211, 26); */
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100vh;
   font-family: sans-serif;
   background-color: #a2d31a;
-  /* background-color: #f0f0f0; */
+
   /* background-image: url(http://www.desertsafaridubai.com/img/morning-desert-safari-hm.jpg); */
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -24,7 +21,7 @@
   width: 100%;
   height: 100vh;
   padding: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0);
 }
 
 .nav {
@@ -62,7 +59,6 @@
 button {
   padding: 10px;
   margin-right: 10px;
-  border: none;
   border-radius: 4px;
   background-color: #a2d31a;
   border: 1px solid;
@@ -117,7 +113,7 @@ button:hover {
   background-color: #fff;
   padding: 20px;
   border-radius: 4px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   text-align: center;
 }
 
@@ -156,4 +152,3 @@ button:hover {
     width: 100%;
   }
 }
-
