--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -31,6 +31,7 @@
   justify-content: flex-end;
   border: none;
   padding-right: 1rem;
+  z-index: 1111111;
 }
 
 @media only screen and (max-width: 768px) {
