--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .app {
-  display: grid;
+  display: flex;
   margin: 0;
   height: auto;
   background-color: #edecec;
-  grid-template-columns: 30% 60%;
+  grid-template-columns: 100%;
+  padding: 0;
+  position: relative;
 }
 
 ul {
@@ -16,4 +18,7 @@ a {
 
 .main-container {
   height: 100vh;
+  position: absolute;
+  left: 0;
+  z-index: 9999;
 }
