--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -1,14 +1,25 @@
 .container {
+  position: relative; /* make the container a positioned parent for the pseudo-element */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: sans-serif;
-  background-color: #a2d31a;
+  background-image: url(https://cdn.pixabay.com/photo/2018/11/20/09/48/triumph-3826923_960_720.png);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   float: left;
-  width: auto;
+  width: 100%;
+}
+
+.container::before {
+  content: '';
+  position: absolute; /* make the pseudo-element positioned relative to the container */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(150, 191, 2, 0.929); /* set the background color with transparency */
 }
 
 .header {
@@ -41,6 +52,8 @@
 }
 
 .title {
+  color: white;
+  z-index: 11;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -67,6 +80,9 @@ button {
 #book_now {
   width: 10rem;
   border-radius: 25px;
+  background-color: #fff;
+  z-index: 10;
+  color: #a2d31a;
 }
 
 .select {
