--- a/src/components/deleteCar/deletecar.css
+++ b/src/components/deleteCar/deletecar.css
@@ -24,7 +24,7 @@
   width: 100px; /* adjust to your desired size */
 }
 
-.car-image {
+.del-car-image {
   width: 60px;
   margin-left: 3rem;
   height: 60px;
