--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -1,5 +1,4 @@
 .container {
-  position: relative; /* make the container a positioned parent for the pseudo-element */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,18 +7,17 @@
   background-image: url(https://cdn.pixabay.com/photo/2018/11/20/09/48/triumph-3826923_960_720.png);
   background-repeat: no-repeat;
   background-size: cover;
-  float: left;
   width: 100%;
 }
 
 .container::before {
   content: '';
-  position: absolute; /* make the pseudo-element positioned relative to the container */
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(150, 191, 2, 0.929); /* set the background color with transparency */
+  background-color: rgba(150, 191, 2, 0.929);
 }
 
 .header {
@@ -52,10 +50,13 @@
 }
 
 .title {
-  color: white;
-  z-index: 11;
+  z-index: 100;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.title > h4 {
+  color: #fff;
 }
 
 .buttons {
