--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -5,4 +5,13 @@
     justify-content: center;
     flex-wrap: wrap;
     align-content: center;
+    height: 100vh;
+}
+
+.plain-btn {
+    margin: 0 !important;
+    background: none !important;
+    border: 1px solid #98c10f !important;
+    width: 6rem;
+    align-self: center;
 }
