Adjust sidebar styles

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,12 +2,12 @@
 
 .sidebar-container {
   height: 100vh;
-  position: relative;
-  display: none !important;
+  width: fit-content;
+  visibility: hidden;
 }
 
 .sidebar-active {
-  display: flex !important;
+  visibility: visible !important;
 }
 
 .sidebar-title {
@@ -19,9 +19,6 @@
 }
 
 .toggle-sidebar-btn {
-  position: absolute;
-  bottom: 78px;
-  right: -59px;
   background-color: #98c10f;
   width: 76px;
   border-bottom-right-radius: 40px;
@@ -35,15 +32,23 @@
   box-shadow: -1px 4px 5px 0 rgba(42, 43, 42, 0.769);
   -webkit-box-shadow: -1px 4px 5px 0 rgba(25, 26, 25, 0.64);
   -moz-box-shadow: -1px 4px 5px 0 rgba(38, 38, 36, 0.703);
+  visibility: visible !important;
+  position: fixed;
+  bottom: 10%;
+  left: 17rem;
+}
+
+.toggle-sidebar-btn.move {
+  left: 0;
 }
 
 @media only screen and (max-width: 768px) {
   .sidebar-container {
     position: relative;
-    display: flex !important;
+    visibility: visible !important;
   }
 
   .sidebar-active {
-    display: none !important;
+    visibility: hidden !important;
   }
 }
