Adjust reservation table

--- a/src/components/addCar/addcar.css
+++ b/src/components/addCar/addcar.css
@@ -34,7 +34,7 @@ h2 {
 .add-car-form {
   width: 50%;
   background-color: #fff;
-  margin-top: 10%;
+  margin-top: 100px;
   height: max-content;
   box-shadow: -1px 4px 5px 0 rgba(42, 43, 42, 0.64);
   -webkit-box-shadow: -1px 4px 5px 0 rgba(25, 26, 25, 0.64);
