--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -43,6 +43,10 @@
   left: 0;
 }
 
+.logout-btn {
+  margin-top: 10rem;
+}
+
 @media only screen and (max-width: 768px) {
   .sidebar-container {
     position: relative;
