--- a/src/pages/cars/cars.css
+++ b/src/pages/cars/cars.css
@@ -13,7 +13,6 @@
   width: 88rem;
   justify-content: space-between;
   gap: 10rem;
-  margin-left: 12%;
 }
 
 .cars-box::-webkit-scrollbar {
@@ -39,6 +38,9 @@
   transform: translateY(-50%);
   position: absolute;
   margin: 0;
+}
+.cars-container .pagination-btn.left {
+  left: 0;
 }
 
 .cars-container .pagination-btn.right {
