Style sign up and sign in screens

--- a/src/components/deleteCar/deletecar.css
+++ b/src/components/deleteCar/deletecar.css
@@ -3,7 +3,7 @@
   height: 100vh;
   align-items: center;
   flex-direction: column;
-  background-image: url(https://cdn.pixabay.com/photo/2016/06/25/10/49/seat-128-1478647_960_720.png);
+  background-image: url(../../assets/delete-car.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
