--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   font-family: sans-serif;
-  background-image: url(https://cdn.pixabay.com/photo/2018/11/20/09/48/triumph-3826923_960_720.png);
+  background-image: url(../../assets/reservation-car.webp);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
