--- a/src/components/addCar/addcar.css
+++ b/src/components/addCar/addcar.css
@@ -16,19 +16,19 @@ h2 {
   justify-content: center;
   width: 100%;
   height: 100vh;
-  background-image: url(https://cdn.pixabay.com/photo/2020/02/05/03/42/lamborghini-4820024_960_720.png);
+  background-image: url(../../assets/add-car.webp);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .form-container::before {
   content: '';
-  position: absolute; /* make the pseudo-element positioned relative to the container */
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(150, 191, 2, 0.929); /* set the background color with transparency */
+  background-color: rgba(150, 191, 2, 0.929);
 }
 
 .add-car-form {
