--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -25,7 +25,7 @@
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.sidebar-title {
+.sidebar-title-signup {
   font-family: "Dr Sugiyama", cursive;
   text-decoration: underline;
   transform: rotate(-13deg);
