--- a/src/pages/cars/CarCard/car-card.css
+++ b/src/pages/cars/CarCard/car-card.css
@@ -6,7 +6,15 @@
 
 .car-image {
   height: auto;
-  width: 15rem;
+  width: 19rem;
+}
+
+.cars-icons svg {
+  border: 1px solid gray;
+  border-radius: 50%;
+  margin: 0 10px;
+  padding: 6px;
+  box-sizing: content-box;
 }
 
 @media only screen and (max-width: 768px) {
