--- a/src/components/detailsPage/details.css
+++ b/src/components/detailsPage/details.css
@@ -73,7 +73,7 @@
 .car-info button {
   font-size: 23px;
   margin-top: 50px;
-  border-radius: 30%;
+  border-radius: 30px;
   float: right;
   width: 141px;
 }
