--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -73,6 +73,12 @@
   font-size: 11px;
 }
 
+.spinner {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
+
 @media only screen and (max-width: 768px) {
   .login-form {
     width: 90%;
