--- a/src/pages/cars/cars.css
+++ b/src/pages/cars/cars.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+
+.cars-section-title{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 3rem;
+  letter-spacing: 3px;
+}
+
 
 .cars-container {
   align-items: center;
