--- a/src/components/detailsPage/details.css
+++ b/src/components/detailsPage/details.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
+  justify-content: center;
 }
 
 .rotate-image {
@@ -99,9 +100,15 @@
   justify-content: space-between;
 }
 
+.loading-car {
+  display: flex;
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   .details-holder {
     flex-direction: column;
+    margin-top: 70px;
   }
 
   .car-info {
