--- a/src/pages/cars/cars.css
+++ b/src/pages/cars/cars.css
@@ -4,6 +4,7 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 3rem;
   letter-spacing: 3px;
+  margin-top: 7rem;
 }
 
 .cars-container {
@@ -61,12 +62,16 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .cars-section-title{
+    margin-top: 7rem;
+  }
+
   .cars-container {
     gap: 0;
     justify-content: flex-start;
   }
 
-  .pagination-btn {
-    display: none !important;
+  .cars-container .pagination-btn {
+    width: 52px;
   }
 }
