--- a/src/components/detailsPage/modal.css
+++ b/src/components/detailsPage/modal.css
@@ -44,6 +44,17 @@ button[type="submit"]:hover {
   background-color: #3e8e41;
 }
 
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.modal-content {
+  margin-top: 30%;
+  padding-bottom: 3rem;
+}
+
 @media (max-width: 768px) {
   form {
     width: 90%;
@@ -52,5 +63,21 @@ button[type="submit"]:hover {
   .modal {
     width: 100%;
     margin-top: 70px;
+    height: 100%;
+  }
+
+  .modal-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cls-m-btn {
+    margin: 0;
+    height: 2rem;
+    width: 2rem;
+    font-size: 21px;
+    padding: 0;
+    border-radius: 50%;
   }
 }
