--- a/src/components/reservationForm/reservationForm.css
+++ b/src/components/reservationForm/reservationForm.css
@@ -93,7 +93,7 @@ button {
   background-color: #c2d6ae;
   align-self: flex-start;
   border-radius: 5rem;
-  padding: 0px 9px;
+  padding: 0 9px;
 }
 
 .cls-m-btn {
