--- a/src/components/detailsPage/modal.css
+++ b/src/components/detailsPage/modal.css
@@ -53,6 +53,11 @@ button[type="submit"]:hover {
   border-radius: 50%;
 }
 
+#select-city {
+  align-self: flex-start;
+  margin: 2rem 0rem;
+}
+
 @media (max-width: 768px) {
   form {
     width: 90%;
