--- a/src/components/userReservationTable/userReservationTable.css
+++ b/src/components/userReservationTable/userReservationTable.css
@@ -47,6 +47,15 @@
   height: 60px;
 }
 
+.no-reservations {
+  color: white;
+  z-index: 99999;
+  font-size: 3rem;
+  padding-top: 6rem;
+  font-weight: 600;
+  border-bottom: 1px solid;
+}
+
 @media only screen and (max-width: 768px) {
   .table {
     width: 20rem;
@@ -73,5 +82,10 @@
   .table-img {
     width: 10px;
     height: 10px;
+  }
+
+  .no-reservations {
+    font-size: 1.5rem;
+    padding-top: 10rem;
   }
 }
